modified get_dictionary_words API
