# swagger_server/models/__init__.py
@@ -15,6 +15,7 @@ from swagger_server.models.get_dictionary_words_filtered_response import GetDict
 from swagger_server.models.get_dictionary_words_filtered_response_data import GetDictionaryWordsFilteredResponseData
 from swagger_server.models.get_dictionary_words_filtered_response_data_words import GetDictionaryWordsFilteredResponseDataWords
 from swagger_server.models.get_dictionary_words_response import GetDictionaryWordsResponse
+from swagger_server.models.get_dictionary_words_response_data import GetDictionaryWordsResponseData
 from swagger_server.models.get_mws_feeds_submissions_response import GetMwsFeedsSubmissionsResponse
 from swagger_server.models.get_mws_feeds_submissions_response_data import GetMwsFeedsSubmissionsResponseData
 from swagger_server.models.get_mws_feeds_submissions_result_response import GetMwsFeedsSubmissionsResultResponse
